# den

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: encoding_benchmark.cpp
cloud/docker/: Dockerfile.cloud
cloud/kubernetes/streaming-server/: deployment.yaml  hpa.yaml
cloud/scripts/: deploy-cloud.sh
cloud/terraform/aws/: main.tf
config/: encoder.yaml  server.yaml
config/cloud/: multi-cloud.yaml
dependencies/: file_tree.txt
dependencies/Boost/: CMakeLists.txt
dependencies/grpc/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  address_sorting.vcxproj  address_sorting.vcxproj.filters  gRPCConfigVersion.cmake  gpr.vcxproj  gpr.vcxproj.filters  grpc++.vcxproj  grpc++.vcxproj.filters  grpc++_alts.vcxproj  grpc++_alts.vcxproj.filters  grpc++_error_details.vcxproj  grpc++_error_details.vcxproj.filters  grpc++_reflection.vcxproj  grpc++_reflection.vcxproj.filters  grpc++_unsecure.vcxproj  grpc++_unsecure.vcxproj.filters  grpc.sln  grpc.vcxproj  grpc.vcxproj.filters  grpc_authorization_provider.vcxproj  grpc_authorization_provider.vcxproj.filters  grpc_cpp_plugin.vcxproj  grpc_cpp_plugin.vcxproj.filters  grpc_csharp_plugin.vcxproj  grpc_csharp_plugin.vcxproj.filters  grpc_node_plugin.vcxproj  grpc_node_plugin.vcxproj.filters  grpc_objective_c_plugin.vcxproj  grpc_objective_c_plugin.vcxproj.filters  grpc_php_plugin.vcxproj  grpc_php_plugin.vcxproj.filters  grpc_plugin_support.vcxproj  (+40 more)
dependencies/grpc/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_bounded_utf8_length_sequence.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  (+175 more)
docker/: Dockerfile.server  docker-compose.yml
examples/: audio_encoding_test.cpp  av1_encoder_test.cpp  complete_streaming_example.cpp  container_test.cpp  custom_codec_example.cpp  h264_encoder_test.cpp  h265_encoder_test.cpp  latency_measurement_test.cpp  motion_estimation_test.cpp  player_example.cpp  protocol_test.cpp  server_example.cpp  video_streaming_example.cpp  vvc_encoder_test.cpp
headers/control/: api_server.hpp  config_manager.hpp
headers/media/: codecs.hpp  color_convert.hpp  decoder.hpp  encoder.hpp  flv_parser.hpp  frame.hpp
headers/network/: http_session.hpp  protocol.hpp  socket_manager.hpp  tcp_server.hpp  udp_server.hpp
headers/storage/: segmenter.hpp  vod_manager.hpp
headers/streaming/: protocol_router.hpp  publisher.hpp  subscriber.hpp
headers/streaming/audio/: audio_codec.hpp  opus_encoder.hpp  pcm_decoder.hpp  pcm_encoder.hpp  resampler.hpp
headers/streaming/client/: audio_renderer.hpp  decoder.hpp  streaming_client.hpp
headers/streaming/codec/: h264_decoder.hpp  h264_encoder.hpp  hevc_structures.hpp  video_codec.hpp  vvc_encoder.hpp
headers/streaming/container/: fragmentation.hpp  media_container.hpp  mp4_writer.hpp  webm_writer.hpp
headers/streaming/engine/: latency_analyzer.hpp  streaming_pipeline.hpp
headers/streaming/performance/: cache_optimizer.hpp  optimizer.hpp  parallelization.hpp
headers/streaming/processing/: av1_entropy.hpp  cavlc_encoder.hpp
headers/streaming/protocol/: congestion_controller.hpp  fec_encoder.hpp  hls_segmenter.hpp  rtmp_server.hpp  streaming_protocol.hpp
headers/streaming/server/: hls_handler.hpp  rtmp_handler.hpp  stream_manager.hpp
headers/streaming/utils/: audio_utils.hpp  bitstream.hpp  logger.hpp
headers/video/: ffmpeg_wrapper.hpp  video_decoder.hpp  video_encoder.hpp
include/streaming/audio/: aac_encoder.hpp  audio_processor.hpp
include/streaming/client/: demuxer.hpp  network_client.hpp  video_renderer.hpp
include/streaming/codec/: av1_encoder.hpp  av1_structures.hpp  h265_encoder.hpp  vvc_structures.hpp
include/streaming/container/: metadata.hpp
include/streaming/engine/: types.hpp
include/streaming/network/: socket_manager.hpp
include/streaming/performance/: memory_pool.hpp  profiler.hpp  vectorization.hpp
include/streaming/processing/: cabac_encoder.hpp  motion_estimation.hpp  quantization.hpp  vvc_entropy.hpp
include/streaming/protocol/: packet_format.hpp  session_manager.hpp
include/streaming/server/: http_flv_handler.hpp  session_handler.hpp  streaming_server.hpp
include/streaming/utils/: configuration.hpp
include/video/: frame_processor.hpp  low_latency_encoder.hpp  video_decoder.hpp  video_encoder.hpp
proto/: control.proto
scripts/: deploy.sh  health-check.sh
source/: publisher.cpp  stream_engine.cpp  subscriber.cpp
source/audio/: aac_encoder.cpp  opus_encoder.cpp  pcm_decoder.cpp  pcm_encoder.cpp  resampler.cpp
source/cloud/: auto_scaler.cpp  cloud_manager.cpp
source/codec/: h265_encoder.cpp  vvc_encoder.cpp
source/control/: config_manager.cpp
source/media/: codecs.cpp  color_convert.cpp  decoder.cpp  encoder.cpp  flv_parser.cpp  frame.cpp
source/network/: http_session.cpp  low_latency_network.cpp  protocol.cpp  socket_manager.cpp  tcp_server.cpp  udp_server.cpp
source/performance/: real_time_monitor.cpp
source/performance/optimizations/: video_encoding_opt.cpp
source/processing/: av1_entropy.cpp  cabac_encoder.cpp  motion_estimation.cpp
source/protocol/: hls_segmenter.cpp  rtmp_server.cpp
source/server/: streaming_server.cpp
source/storage/: vod_manager.cpp
src/audio/: low_latency_processor.cpp  opus_encoder.cpp
src/client/: streaming_client.cpp
src/cloud/: service_discovery.cpp
src/codec/: av1_encoder.cpp  h264_encoder.cpp
src/container/: mp4_writer.cpp
src/engine/: streaming_pipeline.cpp
src/network/: low_latency_network.cpp  socket_manager.cpp
src/processing/: vvc_entropy.cpp
src/protocol/: streaming_protocol.cpp
src/utils/: configuration.cpp
src/video/: low_latency_encoder.cpp
systemd/: streaming-server.service
(+775 files in other folders)
